--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" href="/Images/image.png" />
     <link rel="manifest" href="/manifest.json" />
     
-    <title>Mars Rover - Mission Control</title>
+    <title>TararBari</title>
   </head>
   <body>
     <div id="root"></div>
